// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`informeMensualHtml — snapshots HTML "estado vacío" — sin actividad operativa 1`] = `
"<!DOCTYPE html>
<html lang="es">
<head>
<meta charset="utf-8">
<title>Informe Ejecutivo Mensual — Restaurante Test</title>
<style>
    :root {
        --primary: #1e3a8a;
        --accent: #f59e0b;
        --good: #16a34a;
        --warn: #ca8a04;
        --orange: #ea580c;
        --bad: #dc2626;
        --neutral: #64748b;
        --bg: #f8fafc;
        --card: #ffffff;
        --border: #e2e8f0;
        --text: #0f172a;
        --muted: #64748b;
    }
    * { box-sizing: border-box; }
    body {
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
        background: var(--bg);
        color: var(--text);
        margin: 0;
        padding: 32px 16px 64px;
        line-height: 1.5;
    }
    .container {
        max-width: 880px;
        margin: 0 auto;
    }
    .print-bar {
        display: flex;
        justify-content: flex-end;
        margin-bottom: 16px;
    }
    .btn-print {
        background: var(--primary);
        color: white;
        border: none;
        padding: 10px 20px;
        border-radius: 8px;
        font-size: 14px;
        font-weight: 600;
        cursor: pointer;
    }
    .btn-print:hover { background: #1e40af; }
    .report {
        background: var(--card);
        border-radius: 12px;
        padding: 40px;
        box-shadow: 0 1px 3px rgba(0,0,0,0.05);
    }
    header.cover {
        border-bottom: 3px solid var(--primary);
        padding-bottom: 24px;
        margin-bottom: 32px;
    }
    header.cover h1 {
        margin: 0 0 4px;
        font-size: 28px;
        color: var(--primary);
    }
    header.cover .subtitle {
        font-size: 16px;
        color: var(--muted);
    }
    header.cover .restaurante {
        font-size: 20px;
        font-weight: 600;
        margin-top: 12px;
    }
    .kpi-grid {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 16px;
        margin-bottom: 32px;
    }
    .kpi-card {
        background: #f1f5f9;
        border-radius: 10px;
        padding: 20px;
        text-align: center;
        border: 1px solid var(--border);
    }
    .kpi-label {
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 0.5px;
        color: var(--muted);
        margin-bottom: 8px;
    }
    .kpi-value {
        font-size: 26px;
        font-weight: 700;
        color: var(--text);
    }
    .kpi-sub {
        font-size: 12px;
        color: var(--muted);
        margin-top: 4px;
    }
    .kpi-good   { color: var(--good); }
    .kpi-warn   { color: var(--warn); }
    .kpi-orange { color: var(--orange); }
    .kpi-bad    { color: var(--bad); }
    .kpi-neutral { color: var(--neutral); }
    section {
        margin-bottom: 32px;
        page-break-inside: avoid;
    }
    h2 {
        font-size: 18px;
        color: var(--primary);
        margin-bottom: 16px;
        padding-bottom: 6px;
        border-bottom: 2px solid var(--border);
    }
    .resumen {
        background: #fef3c7;
        border-left: 4px solid var(--accent);
        padding: 16px 20px;
        border-radius: 6px;
        font-size: 15px;
    }
    ul.observaciones {
        padding-left: 20px;
    }
    ul.observaciones li {
        margin-bottom: 8px;
    }
    .reco {
        background: #ecfdf5;
        border-left: 4px solid var(--good);
        padding: 14px 18px;
        border-radius: 6px;
        margin-bottom: 12px;
    }
    .reco-title {
        font-weight: 700;
        margin-bottom: 4px;
        color: #065f46;
    }
    .reco-detalle {
        font-size: 14px;
        margin-bottom: 6px;
    }
    .reco-impacto {
        font-size: 13px;
        color: var(--muted);
    }
    table {
        width: 100%;
        border-collapse: collapse;
        font-size: 14px;
    }
    th, td {
        text-align: left;
        padding: 8px 10px;
        border-bottom: 1px solid var(--border);
    }
    th {
        background: #f1f5f9;
        font-weight: 600;
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 0.3px;
        color: var(--muted);
    }
    td.num, th.num { text-align: right; }
    .alertas .alerta {
        padding: 10px 14px;
        border-radius: 6px;
        margin-bottom: 8px;
        font-size: 14px;
    }
    .alerta-warning  { background: #fef9c3; border-left: 4px solid var(--warn); }
    .alerta-critical { background: #fee2e2; border-left: 4px solid var(--bad); }
    .alerta-info     { background: #dbeafe; border-left: 4px solid var(--primary); }
    .footer {
        text-align: center;
        font-size: 12px;
        color: var(--muted);
        margin-top: 32px;
        padding-top: 16px;
        border-top: 1px solid var(--border);
    }
    .empty {
        color: var(--muted);
        font-style: italic;
        font-size: 14px;
    }
    /* P&L cascade */
    .pyg-table {
        width: 100%;
        border-collapse: collapse;
        font-size: 15px;
    }
    .pyg-table td {
        padding: 10px 12px;
        border-bottom: 1px solid var(--border);
    }
    .pyg-table td.num {
        font-variant-numeric: tabular-nums;
        font-weight: 600;
    }
    .pyg-table tr.pyg-minus td { color: var(--muted); }
    .pyg-table tr.pyg-subtotal td {
        background: #f1f5f9;
        font-weight: 600;
    }
    .pyg-table tr.pyg-total td {
        background: var(--primary);
        color: white;
        font-size: 17px;
        border-bottom: none;
    }
    .pyg-table tr.pyg-total td.num strong { color: #fff; }
    .pyg-table tr.pyg-total .kpi-good { color: #86efac; }
    .pyg-table tr.pyg-total .kpi-bad { color: #fca5a5; }
    .pyg-table tr.pyg-pct td {
        background: #f8fafc;
        font-size: 13px;
        color: var(--muted);
    }
    .pyg-sub-info {
        color: var(--muted);
        font-weight: 400;
        font-size: 12px;
    }
    /* Mermas KPI */
    .mermas-kpi {
        background: #fef2f2;
        border-left: 4px solid var(--bad);
        padding: 14px 18px;
        border-radius: 6px;
        margin-bottom: 12px;
    }
    .mermas-kpi-label {
        font-size: 12px;
        text-transform: uppercase;
        color: var(--muted);
        margin-bottom: 4px;
    }
    .mermas-kpi-value {
        font-size: 22px;
        font-weight: 700;
    }
    .mermas-kpi-sub {
        font-size: 12px;
        color: var(--muted);
        margin-top: 2px;
    }
    /* Sparkline container */
    .sparkline-box {
        background: #f8fafc;
        border-radius: 8px;
        padding: 12px 16px;
        border: 1px solid var(--border);
    }

    @media print {
        body { background: white; padding: 0; }
        .print-bar { display: none; }
        .report { box-shadow: none; padding: 24px; border-radius: 0; }
        h2 { page-break-after: avoid; }
        table, .reco, .resumen, .alerta, .kpi-card { page-break-inside: avoid; }
    }
</style>
</head>
<body>
<div class="container">
    <div class="print-bar">
        <button class="btn-print" onclick="window.print()">🖨️ Imprimir / Guardar PDF</button>
    </div>
    <div class="report">
        <header class="cover">
            <h1>Informe Ejecutivo Mensual</h1>
            <div class="subtitle">Periodo: 2026-04</div>
            <div class="restaurante">Restaurante Test</div>
        </header>

        <section>
            <h2>📊 Indicadores Clave</h2>
            <div class="kpi-grid">
                <div class="kpi-card">
                    <div class="kpi-label">Ingresos</div>
                    <div class="kpi-value">0,00 €</div>
                    <div class="kpi-sub"><span class="kpi-neutral">—</span> vs mes anterior</div>
                </div>
                <div class="kpi-card">
                    <div class="kpi-label">Food Cost</div>
                    <div class="kpi-value kpi-good">0.0%</div>
                    <div class="kpi-sub">COGS: 0,00 €</div>
                </div>
                <div class="kpi-card">
                    <div class="kpi-label">Inventario</div>
                    <div class="kpi-value">0,00 €</div>
                    <div class="kpi-sub">0 Bajo mínimo · 0 Sin stock</div>
                </div>
            </div>
        </section>

        <section>
            <h2>📝 Resumen Ejecutivo</h2>
            <div class="resumen">Sin actividad este mes.</div>
        </section>

        <section>
            <h2>💼 P&amp;L — Cuenta de Resultados</h2>
            
        <table class="pyg-table">
            <tr><td>Ingresos</td><td class="num">0,00 €</td></tr>
            <tr class="pyg-minus"><td>− COGS (coste materia prima)</td><td class="num">0,00 €</td></tr>
            <tr class="pyg-subtotal"><td>Margen bruto</td><td class="num">0,00 €</td></tr>
            <tr class="pyg-minus"><td>− Gastos fijos <span class="pyg-sub-info">(0)</span></td><td class="num">0,00 €</td></tr>
            <tr class="pyg-total"><td><strong>Beneficio neto</strong></td><td class="num"><strong class="kpi-good">0,00 €</strong></td></tr>
            <tr class="pyg-pct"><td>Margen neto</td><td class="num"><span class="kpi-warn">0.0%</span></td></tr>
        </table>
    
        </section>

        

        

        

        

        

        <section>
            <h2>🗑️ Mermas (dinero perdido)</h2>
            <div class="empty">Ningún registro de merma este mes — perfecto.</div>
        </section>

        

        

        

        <div class="footer">
            Generado el 30 de abril de 2026 a las 14:00 · MindLoop CostOS
        </div>
    </div>
</div>
</body>
</html>"
`;

exports[`informeMensualHtml — snapshots HTML completo en EN con moneda RM (tenant Malasia) 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8">
<title>Monthly Executive Report — KL Restaurant</title>
<style>
    :root {
        --primary: #1e3a8a;
        --accent: #f59e0b;
        --good: #16a34a;
        --warn: #ca8a04;
        --orange: #ea580c;
        --bad: #dc2626;
        --neutral: #64748b;
        --bg: #f8fafc;
        --card: #ffffff;
        --border: #e2e8f0;
        --text: #0f172a;
        --muted: #64748b;
    }
    * { box-sizing: border-box; }
    body {
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
        background: var(--bg);
        color: var(--text);
        margin: 0;
        padding: 32px 16px 64px;
        line-height: 1.5;
    }
    .container {
        max-width: 880px;
        margin: 0 auto;
    }
    .print-bar {
        display: flex;
        justify-content: flex-end;
        margin-bottom: 16px;
    }
    .btn-print {
        background: var(--primary);
        color: white;
        border: none;
        padding: 10px 20px;
        border-radius: 8px;
        font-size: 14px;
        font-weight: 600;
        cursor: pointer;
    }
    .btn-print:hover { background: #1e40af; }
    .report {
        background: var(--card);
        border-radius: 12px;
        padding: 40px;
        box-shadow: 0 1px 3px rgba(0,0,0,0.05);
    }
    header.cover {
        border-bottom: 3px solid var(--primary);
        padding-bottom: 24px;
        margin-bottom: 32px;
    }
    header.cover h1 {
        margin: 0 0 4px;
        font-size: 28px;
        color: var(--primary);
    }
    header.cover .subtitle {
        font-size: 16px;
        color: var(--muted);
    }
    header.cover .restaurante {
        font-size: 20px;
        font-weight: 600;
        margin-top: 12px;
    }
    .kpi-grid {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 16px;
        margin-bottom: 32px;
    }
    .kpi-card {
        background: #f1f5f9;
        border-radius: 10px;
        padding: 20px;
        text-align: center;
        border: 1px solid var(--border);
    }
    .kpi-label {
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 0.5px;
        color: var(--muted);
        margin-bottom: 8px;
    }
    .kpi-value {
        font-size: 26px;
        font-weight: 700;
        color: var(--text);
    }
    .kpi-sub {
        font-size: 12px;
        color: var(--muted);
        margin-top: 4px;
    }
    .kpi-good   { color: var(--good); }
    .kpi-warn   { color: var(--warn); }
    .kpi-orange { color: var(--orange); }
    .kpi-bad    { color: var(--bad); }
    .kpi-neutral { color: var(--neutral); }
    section {
        margin-bottom: 32px;
        page-break-inside: avoid;
    }
    h2 {
        font-size: 18px;
        color: var(--primary);
        margin-bottom: 16px;
        padding-bottom: 6px;
        border-bottom: 2px solid var(--border);
    }
    .resumen {
        background: #fef3c7;
        border-left: 4px solid var(--accent);
        padding: 16px 20px;
        border-radius: 6px;
        font-size: 15px;
    }
    ul.observaciones {
        padding-left: 20px;
    }
    ul.observaciones li {
        margin-bottom: 8px;
    }
    .reco {
        background: #ecfdf5;
        border-left: 4px solid var(--good);
        padding: 14px 18px;
        border-radius: 6px;
        margin-bottom: 12px;
    }
    .reco-title {
        font-weight: 700;
        margin-bottom: 4px;
        color: #065f46;
    }
    .reco-detalle {
        font-size: 14px;
        margin-bottom: 6px;
    }
    .reco-impacto {
        font-size: 13px;
        color: var(--muted);
    }
    table {
        width: 100%;
        border-collapse: collapse;
        font-size: 14px;
    }
    th, td {
        text-align: left;
        padding: 8px 10px;
        border-bottom: 1px solid var(--border);
    }
    th {
        background: #f1f5f9;
        font-weight: 600;
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 0.3px;
        color: var(--muted);
    }
    td.num, th.num { text-align: right; }
    .alertas .alerta {
        padding: 10px 14px;
        border-radius: 6px;
        margin-bottom: 8px;
        font-size: 14px;
    }
    .alerta-warning  { background: #fef9c3; border-left: 4px solid var(--warn); }
    .alerta-critical { background: #fee2e2; border-left: 4px solid var(--bad); }
    .alerta-info     { background: #dbeafe; border-left: 4px solid var(--primary); }
    .footer {
        text-align: center;
        font-size: 12px;
        color: var(--muted);
        margin-top: 32px;
        padding-top: 16px;
        border-top: 1px solid var(--border);
    }
    .empty {
        color: var(--muted);
        font-style: italic;
        font-size: 14px;
    }
    /* P&L cascade */
    .pyg-table {
        width: 100%;
        border-collapse: collapse;
        font-size: 15px;
    }
    .pyg-table td {
        padding: 10px 12px;
        border-bottom: 1px solid var(--border);
    }
    .pyg-table td.num {
        font-variant-numeric: tabular-nums;
        font-weight: 600;
    }
    .pyg-table tr.pyg-minus td { color: var(--muted); }
    .pyg-table tr.pyg-subtotal td {
        background: #f1f5f9;
        font-weight: 600;
    }
    .pyg-table tr.pyg-total td {
        background: var(--primary);
        color: white;
        font-size: 17px;
        border-bottom: none;
    }
    .pyg-table tr.pyg-total td.num strong { color: #fff; }
    .pyg-table tr.pyg-total .kpi-good { color: #86efac; }
    .pyg-table tr.pyg-total .kpi-bad { color: #fca5a5; }
    .pyg-table tr.pyg-pct td {
        background: #f8fafc;
        font-size: 13px;
        color: var(--muted);
    }
    .pyg-sub-info {
        color: var(--muted);
        font-weight: 400;
        font-size: 12px;
    }
    /* Mermas KPI */
    .mermas-kpi {
        background: #fef2f2;
        border-left: 4px solid var(--bad);
        padding: 14px 18px;
        border-radius: 6px;
        margin-bottom: 12px;
    }
    .mermas-kpi-label {
        font-size: 12px;
        text-transform: uppercase;
        color: var(--muted);
        margin-bottom: 4px;
    }
    .mermas-kpi-value {
        font-size: 22px;
        font-weight: 700;
    }
    .mermas-kpi-sub {
        font-size: 12px;
        color: var(--muted);
        margin-top: 2px;
    }
    /* Sparkline container */
    .sparkline-box {
        background: #f8fafc;
        border-radius: 8px;
        padding: 12px 16px;
        border: 1px solid var(--border);
    }

    @media print {
        body { background: white; padding: 0; }
        .print-bar { display: none; }
        .report { box-shadow: none; padding: 24px; border-radius: 0; }
        h2 { page-break-after: avoid; }
        table, .reco, .resumen, .alerta, .kpi-card { page-break-inside: avoid; }
    }
</style>
</head>
<body>
<div class="container">
    <div class="print-bar">
        <button class="btn-print" onclick="window.print()">🖨️ Print / Save as PDF</button>
    </div>
    <div class="report">
        <header class="cover">
            <h1>Monthly Executive Report</h1>
            <div class="subtitle">Period: 2026-04</div>
            <div class="restaurante">KL Restaurant</div>
        </header>

        <section>
            <h2>📊 Key Indicators</h2>
            <div class="kpi-grid">
                <div class="kpi-card">
                    <div class="kpi-label">Revenue</div>
                    <div class="kpi-value">RM 47.200,00</div>
                    <div class="kpi-sub"><span class="kpi-good">+12.1%</span> vs previous month</div>
                </div>
                <div class="kpi-card">
                    <div class="kpi-label">Food Cost</div>
                    <div class="kpi-value kpi-warn">33.8%</div>
                    <div class="kpi-sub">COGS: RM 15.953,60</div>
                </div>
                <div class="kpi-card">
                    <div class="kpi-label">Inventory</div>
                    <div class="kpi-value">RM 8400,00</div>
                    <div class="kpi-sub">4 Below minimum · 1 Out of stock</div>
                </div>
            </div>
        </section>

        <section>
            <h2>📝 Executive Summary</h2>
            <div class="resumen">Mes positivo con <strong>beneficio neto de 12.746 €</strong> (+12% vs mes anterior). Food cost dentro del rango objetivo.</div>
        </section>

        <section>
            <h2>💼 P&amp;L — Profit &amp; Loss</h2>
            
        <table class="pyg-table">
            <tr><td>Revenue</td><td class="num">RM 47.200,00</td></tr>
            <tr class="pyg-minus"><td>− COGS (cost of goods sold)</td><td class="num">RM 15.953,60</td></tr>
            <tr class="pyg-subtotal"><td>Gross margin</td><td class="num">RM 31.246,40</td></tr>
            <tr class="pyg-minus"><td>− Fixed costs <span class="pyg-sub-info">(8)</span></td><td class="num">RM 18.500,00</td></tr>
            <tr class="pyg-total"><td><strong>Net profit</strong></td><td class="num"><strong class="kpi-good">RM 12.746,40</strong></td></tr>
            <tr class="pyg-pct"><td>Net margin</td><td class="num"><span class="kpi-good">27.0%</span></td></tr>
        </table>
    
        </section>

        
        <section>
            <h2>📉 Daily revenue evolution</h2>
            <div class="sparkline-box">
    <svg viewBox="0 0 600 102" preserveAspectRatio="none" style="width:100%; height:110px;" role="img" aria-label="Evolución de ingresos">
        <defs>
            <linearGradient id="sl-area" x1="0" y1="0" x2="0" y2="1">
                <stop offset="0%"  stop-color="#1e3a8a" stop-opacity="0.35"/>
                <stop offset="100%" stop-color="#1e3a8a" stop-opacity="0"/>
            </linearGradient>
        </defs>
        <path d="M 8,72 L 8.0,27.8 L 154.0,16.5 L 300.0,20.5 L 446.0,8.0 L 592.0,12.6 L 592,72 Z" fill="url(#sl-area)" stroke="none"/>
        <polyline points="8.0,27.8 154.0,16.5 300.0,20.5 446.0,8.0 592.0,12.6" fill="none" stroke="#1e3a8a" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
        <circle cx="446.0" cy="8.0" r="3.5" fill="#f59e0b" stroke="#fff" stroke-width="1.5"/>
        <text x="8" y="96" font-size="11" fill="#64748b" font-family="-apple-system, sans-serif">01 Apr</text>
        <text x="592" y="96" font-size="11" fill="#64748b" font-family="-apple-system, sans-serif" text-anchor="end">29 Apr</text>
        <text x="446.0" y="14.0" font-size="11" fill="#f59e0b" font-weight="700" font-family="-apple-system, sans-serif" text-anchor="middle">RM 2100,00</text>
    </svg></div>
        </section>
        

        
        <section>
            <h2>🔍 Observations</h2>
            <ul class="observaciones"><li>Ingresos crecen 12.1% vs marzo.</li><li>Pulpo subió 13.5% — revisar precio venta de Pulpo a la gallega.</li><li>Solomillo Wellington con food cost 48%, fuera de rango.</li></ul>
        </section>
        

        
        <section class="alertas">
            <h2>⚠️ Alerts</h2>
            
                <div class="alerta alerta-warning">Pulpo +13.5%: revisar margen.</div>
            
        </section>
    

        
        <section>
            <h2>💡 Recommendations</h2>
            
            <div class="reco">
                <div class="reco-title">Resubir precio de Pulpo a la gallega</div>
                <div class="reco-detalle">El plato bandera está a 71% de margen — buen colchón para repercutir +1€ sin perder volumen.</div>
                <div class="reco-impacto"><strong>Impact:</strong> +142 ud × 1€ = 142 €/mes</div>
            </div>
        
            <div class="reco">
                <div class="reco-title">Revisar receta de Wellington</div>
                <div class="reco-detalle">Food cost 48% indica raciones desproporcionadas o precio venta bajo.</div>
                <div class="reco-impacto"><strong>Impact:</strong> reducir 8% food cost = 110 €/mes</div>
            </div>
        
        </section>
        

        
        <section>
            <h2>🚚 Top Suppliers</h2>
            <table>
                <thead>
                    <tr>
                        <th>Supplier</th>
                        <th class="num">This month</th>
                        <th class="num">Previous month</th>
                        <th class="num">Change</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Pescados Pepe</td>
            <td class="num">RM 6200,00</td>
            <td class="num">RM 5800,00</td>
            <td class="num"><span class="kpi-bad">+6.9%</span></td>
        </tr>
        <tr>
            <td>Frutas García</td>
            <td class="num">RM 2100,00</td>
            <td class="num">RM 2050,00</td>
            <td class="num"><span class="kpi-bad">+2.4%</span></td>
        </tr></tbody>
            </table>
        </section>
        

        <section>
            <h2>🗑️ Losses (waste)</h2>
            
        <div class="mermas-kpi">
            <div class="mermas-kpi-label">Total value lost</div>
            <div class="mermas-kpi-value kpi-bad">RM 145,00</div>
            <div class="mermas-kpi-sub">3 records</div>
        </div>
        <table>
            <thead><tr>
                <th>Reason</th>
                <th class="num">Items</th>
                <th class="num">Value</th>
            </tr></thead>
            <tbody>
        <tr>
            <td>caducado</td>
            <td class="num">2</td>
            <td class="num">RM 95,00</td>
        </tr>
    
        <tr>
            <td>rotura</td>
            <td class="num">1</td>
            <td class="num">RM 50,00</td>
        </tr>
    </tbody>
        </table>
    
        </section>

        
        <section>
            <h2>🏆 Most Profitable Dishes</h2>
            <table>
                <thead>
                    <tr>
                        <th>Dish</th>
                        <th class="num">Sold</th>
                        <th class="num">Revenue</th>
                        <th class="num">Margin</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Pulpo a la gallega</td>
            <td class="num">142</td>
            <td class="num">RM 4118,00</td>
            <td class="num">71.0%</td>
        </tr>
    
        <tr>
            <td>Cocido madrileño</td>
            <td class="num">98</td>
            <td class="num">RM 1862,00</td>
            <td class="num">65.0%</td>
        </tr>
    </tbody>
            </table>
        </section>
        

        
        <section>
            <h2>⚠️ High Food Cost Dishes</h2>
            <table>
                <thead>
                    <tr>
                        <th>Dish</th>
                        <th class="num">Sold</th>
                        <th class="num">Food Cost</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Solomillo Wellington</td>
            <td class="num">35</td>
            <td class="num"><span class="kpi-bad">48.0%</span></td>
        </tr>
    </tbody>
            </table>
        </section>
        

        
        <section>
            <h2>📈 Significant Price Changes</h2>
            <table>
                <thead>
                    <tr>
                        <th>Ingredient</th>
                        <th class="num">Previous</th>
                        <th class="num">Current</th>
                        <th class="num">Change</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Pulpo</td>
            <td class="num">RM 18,50</td>
            <td class="num">RM 21,00</td>
            <td class="num"><span class="kpi-bad">+13.5%</span></td>
        </tr></tbody>
            </table>
        </section>
        

        <div class="footer">
            Generated on 30 April 2026 at 14:00 · MindLoop CostOS
        </div>
    </div>
</div>
</body>
</html>"
`;

exports[`informeMensualHtml — snapshots HTML completo en ES con datos reales 1`] = `
"<!DOCTYPE html>
<html lang="es">
<head>
<meta charset="utf-8">
<title>Informe Ejecutivo Mensual — La Caleta 102</title>
<style>
    :root {
        --primary: #1e3a8a;
        --accent: #f59e0b;
        --good: #16a34a;
        --warn: #ca8a04;
        --orange: #ea580c;
        --bad: #dc2626;
        --neutral: #64748b;
        --bg: #f8fafc;
        --card: #ffffff;
        --border: #e2e8f0;
        --text: #0f172a;
        --muted: #64748b;
    }
    * { box-sizing: border-box; }
    body {
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
        background: var(--bg);
        color: var(--text);
        margin: 0;
        padding: 32px 16px 64px;
        line-height: 1.5;
    }
    .container {
        max-width: 880px;
        margin: 0 auto;
    }
    .print-bar {
        display: flex;
        justify-content: flex-end;
        margin-bottom: 16px;
    }
    .btn-print {
        background: var(--primary);
        color: white;
        border: none;
        padding: 10px 20px;
        border-radius: 8px;
        font-size: 14px;
        font-weight: 600;
        cursor: pointer;
    }
    .btn-print:hover { background: #1e40af; }
    .report {
        background: var(--card);
        border-radius: 12px;
        padding: 40px;
        box-shadow: 0 1px 3px rgba(0,0,0,0.05);
    }
    header.cover {
        border-bottom: 3px solid var(--primary);
        padding-bottom: 24px;
        margin-bottom: 32px;
    }
    header.cover h1 {
        margin: 0 0 4px;
        font-size: 28px;
        color: var(--primary);
    }
    header.cover .subtitle {
        font-size: 16px;
        color: var(--muted);
    }
    header.cover .restaurante {
        font-size: 20px;
        font-weight: 600;
        margin-top: 12px;
    }
    .kpi-grid {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 16px;
        margin-bottom: 32px;
    }
    .kpi-card {
        background: #f1f5f9;
        border-radius: 10px;
        padding: 20px;
        text-align: center;
        border: 1px solid var(--border);
    }
    .kpi-label {
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 0.5px;
        color: var(--muted);
        margin-bottom: 8px;
    }
    .kpi-value {
        font-size: 26px;
        font-weight: 700;
        color: var(--text);
    }
    .kpi-sub {
        font-size: 12px;
        color: var(--muted);
        margin-top: 4px;
    }
    .kpi-good   { color: var(--good); }
    .kpi-warn   { color: var(--warn); }
    .kpi-orange { color: var(--orange); }
    .kpi-bad    { color: var(--bad); }
    .kpi-neutral { color: var(--neutral); }
    section {
        margin-bottom: 32px;
        page-break-inside: avoid;
    }
    h2 {
        font-size: 18px;
        color: var(--primary);
        margin-bottom: 16px;
        padding-bottom: 6px;
        border-bottom: 2px solid var(--border);
    }
    .resumen {
        background: #fef3c7;
        border-left: 4px solid var(--accent);
        padding: 16px 20px;
        border-radius: 6px;
        font-size: 15px;
    }
    ul.observaciones {
        padding-left: 20px;
    }
    ul.observaciones li {
        margin-bottom: 8px;
    }
    .reco {
        background: #ecfdf5;
        border-left: 4px solid var(--good);
        padding: 14px 18px;
        border-radius: 6px;
        margin-bottom: 12px;
    }
    .reco-title {
        font-weight: 700;
        margin-bottom: 4px;
        color: #065f46;
    }
    .reco-detalle {
        font-size: 14px;
        margin-bottom: 6px;
    }
    .reco-impacto {
        font-size: 13px;
        color: var(--muted);
    }
    table {
        width: 100%;
        border-collapse: collapse;
        font-size: 14px;
    }
    th, td {
        text-align: left;
        padding: 8px 10px;
        border-bottom: 1px solid var(--border);
    }
    th {
        background: #f1f5f9;
        font-weight: 600;
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 0.3px;
        color: var(--muted);
    }
    td.num, th.num { text-align: right; }
    .alertas .alerta {
        padding: 10px 14px;
        border-radius: 6px;
        margin-bottom: 8px;
        font-size: 14px;
    }
    .alerta-warning  { background: #fef9c3; border-left: 4px solid var(--warn); }
    .alerta-critical { background: #fee2e2; border-left: 4px solid var(--bad); }
    .alerta-info     { background: #dbeafe; border-left: 4px solid var(--primary); }
    .footer {
        text-align: center;
        font-size: 12px;
        color: var(--muted);
        margin-top: 32px;
        padding-top: 16px;
        border-top: 1px solid var(--border);
    }
    .empty {
        color: var(--muted);
        font-style: italic;
        font-size: 14px;
    }
    /* P&L cascade */
    .pyg-table {
        width: 100%;
        border-collapse: collapse;
        font-size: 15px;
    }
    .pyg-table td {
        padding: 10px 12px;
        border-bottom: 1px solid var(--border);
    }
    .pyg-table td.num {
        font-variant-numeric: tabular-nums;
        font-weight: 600;
    }
    .pyg-table tr.pyg-minus td { color: var(--muted); }
    .pyg-table tr.pyg-subtotal td {
        background: #f1f5f9;
        font-weight: 600;
    }
    .pyg-table tr.pyg-total td {
        background: var(--primary);
        color: white;
        font-size: 17px;
        border-bottom: none;
    }
    .pyg-table tr.pyg-total td.num strong { color: #fff; }
    .pyg-table tr.pyg-total .kpi-good { color: #86efac; }
    .pyg-table tr.pyg-total .kpi-bad { color: #fca5a5; }
    .pyg-table tr.pyg-pct td {
        background: #f8fafc;
        font-size: 13px;
        color: var(--muted);
    }
    .pyg-sub-info {
        color: var(--muted);
        font-weight: 400;
        font-size: 12px;
    }
    /* Mermas KPI */
    .mermas-kpi {
        background: #fef2f2;
        border-left: 4px solid var(--bad);
        padding: 14px 18px;
        border-radius: 6px;
        margin-bottom: 12px;
    }
    .mermas-kpi-label {
        font-size: 12px;
        text-transform: uppercase;
        color: var(--muted);
        margin-bottom: 4px;
    }
    .mermas-kpi-value {
        font-size: 22px;
        font-weight: 700;
    }
    .mermas-kpi-sub {
        font-size: 12px;
        color: var(--muted);
        margin-top: 2px;
    }
    /* Sparkline container */
    .sparkline-box {
        background: #f8fafc;
        border-radius: 8px;
        padding: 12px 16px;
        border: 1px solid var(--border);
    }

    @media print {
        body { background: white; padding: 0; }
        .print-bar { display: none; }
        .report { box-shadow: none; padding: 24px; border-radius: 0; }
        h2 { page-break-after: avoid; }
        table, .reco, .resumen, .alerta, .kpi-card { page-break-inside: avoid; }
    }
</style>
</head>
<body>
<div class="container">
    <div class="print-bar">
        <button class="btn-print" onclick="window.print()">🖨️ Imprimir / Guardar PDF</button>
    </div>
    <div class="report">
        <header class="cover">
            <h1>Informe Ejecutivo Mensual</h1>
            <div class="subtitle">Periodo: 2026-04</div>
            <div class="restaurante">La Caleta 102</div>
        </header>

        <section>
            <h2>📊 Indicadores Clave</h2>
            <div class="kpi-grid">
                <div class="kpi-card">
                    <div class="kpi-label">Ingresos</div>
                    <div class="kpi-value">47.200,00 €</div>
                    <div class="kpi-sub"><span class="kpi-good">+12.1%</span> vs mes anterior</div>
                </div>
                <div class="kpi-card">
                    <div class="kpi-label">Food Cost</div>
                    <div class="kpi-value kpi-warn">33.8%</div>
                    <div class="kpi-sub">COGS: 15.953,60 €</div>
                </div>
                <div class="kpi-card">
                    <div class="kpi-label">Inventario</div>
                    <div class="kpi-value">8400,00 €</div>
                    <div class="kpi-sub">4 Bajo mínimo · 1 Sin stock</div>
                </div>
            </div>
        </section>

        <section>
            <h2>📝 Resumen Ejecutivo</h2>
            <div class="resumen">Mes positivo con <strong>beneficio neto de 12.746 €</strong> (+12% vs mes anterior). Food cost dentro del rango objetivo.</div>
        </section>

        <section>
            <h2>💼 P&amp;L — Cuenta de Resultados</h2>
            
        <table class="pyg-table">
            <tr><td>Ingresos</td><td class="num">47.200,00 €</td></tr>
            <tr class="pyg-minus"><td>− COGS (coste materia prima)</td><td class="num">15.953,60 €</td></tr>
            <tr class="pyg-subtotal"><td>Margen bruto</td><td class="num">31.246,40 €</td></tr>
            <tr class="pyg-minus"><td>− Gastos fijos <span class="pyg-sub-info">(8)</span></td><td class="num">18.500,00 €</td></tr>
            <tr class="pyg-total"><td><strong>Beneficio neto</strong></td><td class="num"><strong class="kpi-good">12.746,40 €</strong></td></tr>
            <tr class="pyg-pct"><td>Margen neto</td><td class="num"><span class="kpi-good">27.0%</span></td></tr>
        </table>
    
        </section>

        
        <section>
            <h2>📉 Evolución diaria de ingresos</h2>
            <div class="sparkline-box">
    <svg viewBox="0 0 600 102" preserveAspectRatio="none" style="width:100%; height:110px;" role="img" aria-label="Evolución de ingresos">
        <defs>
            <linearGradient id="sl-area" x1="0" y1="0" x2="0" y2="1">
                <stop offset="0%"  stop-color="#1e3a8a" stop-opacity="0.35"/>
                <stop offset="100%" stop-color="#1e3a8a" stop-opacity="0"/>
            </linearGradient>
        </defs>
        <path d="M 8,72 L 8.0,27.8 L 154.0,16.5 L 300.0,20.5 L 446.0,8.0 L 592.0,12.6 L 592,72 Z" fill="url(#sl-area)" stroke="none"/>
        <polyline points="8.0,27.8 154.0,16.5 300.0,20.5 446.0,8.0 592.0,12.6" fill="none" stroke="#1e3a8a" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
        <circle cx="446.0" cy="8.0" r="3.5" fill="#f59e0b" stroke="#fff" stroke-width="1.5"/>
        <text x="8" y="96" font-size="11" fill="#64748b" font-family="-apple-system, sans-serif">01 abr</text>
        <text x="592" y="96" font-size="11" fill="#64748b" font-family="-apple-system, sans-serif" text-anchor="end">29 abr</text>
        <text x="446.0" y="14.0" font-size="11" fill="#f59e0b" font-weight="700" font-family="-apple-system, sans-serif" text-anchor="middle">2100,00 €</text>
    </svg></div>
        </section>
        

        
        <section>
            <h2>🔍 Observaciones</h2>
            <ul class="observaciones"><li>Ingresos crecen 12.1% vs marzo.</li><li>Pulpo subió 13.5% — revisar precio venta de Pulpo a la gallega.</li><li>Solomillo Wellington con food cost 48%, fuera de rango.</li></ul>
        </section>
        

        
        <section class="alertas">
            <h2>⚠️ Alertas</h2>
            
                <div class="alerta alerta-warning">Pulpo +13.5%: revisar margen.</div>
            
        </section>
    

        
        <section>
            <h2>💡 Recomendaciones</h2>
            
            <div class="reco">
                <div class="reco-title">Resubir precio de Pulpo a la gallega</div>
                <div class="reco-detalle">El plato bandera está a 71% de margen — buen colchón para repercutir +1€ sin perder volumen.</div>
                <div class="reco-impacto"><strong>Impacto:</strong> +142 ud × 1€ = 142 €/mes</div>
            </div>
        
            <div class="reco">
                <div class="reco-title">Revisar receta de Wellington</div>
                <div class="reco-detalle">Food cost 48% indica raciones desproporcionadas o precio venta bajo.</div>
                <div class="reco-impacto"><strong>Impacto:</strong> reducir 8% food cost = 110 €/mes</div>
            </div>
        
        </section>
        

        
        <section>
            <h2>🚚 Top Proveedores</h2>
            <table>
                <thead>
                    <tr>
                        <th>Proveedor</th>
                        <th class="num">Este mes</th>
                        <th class="num">Mes anterior</th>
                        <th class="num">Variación</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Pescados Pepe</td>
            <td class="num">6200,00 €</td>
            <td class="num">5800,00 €</td>
            <td class="num"><span class="kpi-bad">+6.9%</span></td>
        </tr>
        <tr>
            <td>Frutas García</td>
            <td class="num">2100,00 €</td>
            <td class="num">2050,00 €</td>
            <td class="num"><span class="kpi-bad">+2.4%</span></td>
        </tr></tbody>
            </table>
        </section>
        

        <section>
            <h2>🗑️ Mermas (dinero perdido)</h2>
            
        <div class="mermas-kpi">
            <div class="mermas-kpi-label">Valor total perdido</div>
            <div class="mermas-kpi-value kpi-bad">145,00 €</div>
            <div class="mermas-kpi-sub">3 registros</div>
        </div>
        <table>
            <thead><tr>
                <th>Motivo</th>
                <th class="num">Nº</th>
                <th class="num">Valor</th>
            </tr></thead>
            <tbody>
        <tr>
            <td>caducado</td>
            <td class="num">2</td>
            <td class="num">95,00 €</td>
        </tr>
    
        <tr>
            <td>rotura</td>
            <td class="num">1</td>
            <td class="num">50,00 €</td>
        </tr>
    </tbody>
        </table>
    
        </section>

        
        <section>
            <h2>🏆 Platos Más Rentables</h2>
            <table>
                <thead>
                    <tr>
                        <th>Plato</th>
                        <th class="num">Vendidas</th>
                        <th class="num">Ingresos</th>
                        <th class="num">Margen</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Pulpo a la gallega</td>
            <td class="num">142</td>
            <td class="num">4118,00 €</td>
            <td class="num">71.0%</td>
        </tr>
    
        <tr>
            <td>Cocido madrileño</td>
            <td class="num">98</td>
            <td class="num">1862,00 €</td>
            <td class="num">65.0%</td>
        </tr>
    </tbody>
            </table>
        </section>
        

        
        <section>
            <h2>⚠️ Platos con Food Cost Alto</h2>
            <table>
                <thead>
                    <tr>
                        <th>Plato</th>
                        <th class="num">Vendidas</th>
                        <th class="num">Food Cost</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Solomillo Wellington</td>
            <td class="num">35</td>
            <td class="num"><span class="kpi-bad">48.0%</span></td>
        </tr>
    </tbody>
            </table>
        </section>
        

        
        <section>
            <h2>📈 Cambios de Precio Significativos</h2>
            <table>
                <thead>
                    <tr>
                        <th>Ingrediente</th>
                        <th class="num">Anterior</th>
                        <th class="num">Actual</th>
                        <th class="num">Variación</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Pulpo</td>
            <td class="num">18,50 €</td>
            <td class="num">21,00 €</td>
            <td class="num"><span class="kpi-bad">+13.5%</span></td>
        </tr></tbody>
            </table>
        </section>
        

        <div class="footer">
            Generado el 30 de abril de 2026 a las 14:00 · MindLoop CostOS
        </div>
    </div>
</div>
</body>
</html>"
`;

exports[`informeMensualHtml — snapshots HTML con análisis IA vacío — secciones opcionales desaparecen 1`] = `
"<!DOCTYPE html>
<html lang="es">
<head>
<meta charset="utf-8">
<title>Informe Ejecutivo Mensual — Test</title>
<style>
    :root {
        --primary: #1e3a8a;
        --accent: #f59e0b;
        --good: #16a34a;
        --warn: #ca8a04;
        --orange: #ea580c;
        --bad: #dc2626;
        --neutral: #64748b;
        --bg: #f8fafc;
        --card: #ffffff;
        --border: #e2e8f0;
        --text: #0f172a;
        --muted: #64748b;
    }
    * { box-sizing: border-box; }
    body {
        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
        background: var(--bg);
        color: var(--text);
        margin: 0;
        padding: 32px 16px 64px;
        line-height: 1.5;
    }
    .container {
        max-width: 880px;
        margin: 0 auto;
    }
    .print-bar {
        display: flex;
        justify-content: flex-end;
        margin-bottom: 16px;
    }
    .btn-print {
        background: var(--primary);
        color: white;
        border: none;
        padding: 10px 20px;
        border-radius: 8px;
        font-size: 14px;
        font-weight: 600;
        cursor: pointer;
    }
    .btn-print:hover { background: #1e40af; }
    .report {
        background: var(--card);
        border-radius: 12px;
        padding: 40px;
        box-shadow: 0 1px 3px rgba(0,0,0,0.05);
    }
    header.cover {
        border-bottom: 3px solid var(--primary);
        padding-bottom: 24px;
        margin-bottom: 32px;
    }
    header.cover h1 {
        margin: 0 0 4px;
        font-size: 28px;
        color: var(--primary);
    }
    header.cover .subtitle {
        font-size: 16px;
        color: var(--muted);
    }
    header.cover .restaurante {
        font-size: 20px;
        font-weight: 600;
        margin-top: 12px;
    }
    .kpi-grid {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 16px;
        margin-bottom: 32px;
    }
    .kpi-card {
        background: #f1f5f9;
        border-radius: 10px;
        padding: 20px;
        text-align: center;
        border: 1px solid var(--border);
    }
    .kpi-label {
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 0.5px;
        color: var(--muted);
        margin-bottom: 8px;
    }
    .kpi-value {
        font-size: 26px;
        font-weight: 700;
        color: var(--text);
    }
    .kpi-sub {
        font-size: 12px;
        color: var(--muted);
        margin-top: 4px;
    }
    .kpi-good   { color: var(--good); }
    .kpi-warn   { color: var(--warn); }
    .kpi-orange { color: var(--orange); }
    .kpi-bad    { color: var(--bad); }
    .kpi-neutral { color: var(--neutral); }
    section {
        margin-bottom: 32px;
        page-break-inside: avoid;
    }
    h2 {
        font-size: 18px;
        color: var(--primary);
        margin-bottom: 16px;
        padding-bottom: 6px;
        border-bottom: 2px solid var(--border);
    }
    .resumen {
        background: #fef3c7;
        border-left: 4px solid var(--accent);
        padding: 16px 20px;
        border-radius: 6px;
        font-size: 15px;
    }
    ul.observaciones {
        padding-left: 20px;
    }
    ul.observaciones li {
        margin-bottom: 8px;
    }
    .reco {
        background: #ecfdf5;
        border-left: 4px solid var(--good);
        padding: 14px 18px;
        border-radius: 6px;
        margin-bottom: 12px;
    }
    .reco-title {
        font-weight: 700;
        margin-bottom: 4px;
        color: #065f46;
    }
    .reco-detalle {
        font-size: 14px;
        margin-bottom: 6px;
    }
    .reco-impacto {
        font-size: 13px;
        color: var(--muted);
    }
    table {
        width: 100%;
        border-collapse: collapse;
        font-size: 14px;
    }
    th, td {
        text-align: left;
        padding: 8px 10px;
        border-bottom: 1px solid var(--border);
    }
    th {
        background: #f1f5f9;
        font-weight: 600;
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 0.3px;
        color: var(--muted);
    }
    td.num, th.num { text-align: right; }
    .alertas .alerta {
        padding: 10px 14px;
        border-radius: 6px;
        margin-bottom: 8px;
        font-size: 14px;
    }
    .alerta-warning  { background: #fef9c3; border-left: 4px solid var(--warn); }
    .alerta-critical { background: #fee2e2; border-left: 4px solid var(--bad); }
    .alerta-info     { background: #dbeafe; border-left: 4px solid var(--primary); }
    .footer {
        text-align: center;
        font-size: 12px;
        color: var(--muted);
        margin-top: 32px;
        padding-top: 16px;
        border-top: 1px solid var(--border);
    }
    .empty {
        color: var(--muted);
        font-style: italic;
        font-size: 14px;
    }
    /* P&L cascade */
    .pyg-table {
        width: 100%;
        border-collapse: collapse;
        font-size: 15px;
    }
    .pyg-table td {
        padding: 10px 12px;
        border-bottom: 1px solid var(--border);
    }
    .pyg-table td.num {
        font-variant-numeric: tabular-nums;
        font-weight: 600;
    }
    .pyg-table tr.pyg-minus td { color: var(--muted); }
    .pyg-table tr.pyg-subtotal td {
        background: #f1f5f9;
        font-weight: 600;
    }
    .pyg-table tr.pyg-total td {
        background: var(--primary);
        color: white;
        font-size: 17px;
        border-bottom: none;
    }
    .pyg-table tr.pyg-total td.num strong { color: #fff; }
    .pyg-table tr.pyg-total .kpi-good { color: #86efac; }
    .pyg-table tr.pyg-total .kpi-bad { color: #fca5a5; }
    .pyg-table tr.pyg-pct td {
        background: #f8fafc;
        font-size: 13px;
        color: var(--muted);
    }
    .pyg-sub-info {
        color: var(--muted);
        font-weight: 400;
        font-size: 12px;
    }
    /* Mermas KPI */
    .mermas-kpi {
        background: #fef2f2;
        border-left: 4px solid var(--bad);
        padding: 14px 18px;
        border-radius: 6px;
        margin-bottom: 12px;
    }
    .mermas-kpi-label {
        font-size: 12px;
        text-transform: uppercase;
        color: var(--muted);
        margin-bottom: 4px;
    }
    .mermas-kpi-value {
        font-size: 22px;
        font-weight: 700;
    }
    .mermas-kpi-sub {
        font-size: 12px;
        color: var(--muted);
        margin-top: 2px;
    }
    /* Sparkline container */
    .sparkline-box {
        background: #f8fafc;
        border-radius: 8px;
        padding: 12px 16px;
        border: 1px solid var(--border);
    }

    @media print {
        body { background: white; padding: 0; }
        .print-bar { display: none; }
        .report { box-shadow: none; padding: 24px; border-radius: 0; }
        h2 { page-break-after: avoid; }
        table, .reco, .resumen, .alerta, .kpi-card { page-break-inside: avoid; }
    }
</style>
</head>
<body>
<div class="container">
    <div class="print-bar">
        <button class="btn-print" onclick="window.print()">🖨️ Imprimir / Guardar PDF</button>
    </div>
    <div class="report">
        <header class="cover">
            <h1>Informe Ejecutivo Mensual</h1>
            <div class="subtitle">Periodo: 2026-04</div>
            <div class="restaurante">Test</div>
        </header>

        <section>
            <h2>📊 Indicadores Clave</h2>
            <div class="kpi-grid">
                <div class="kpi-card">
                    <div class="kpi-label">Ingresos</div>
                    <div class="kpi-value">47.200,00 €</div>
                    <div class="kpi-sub"><span class="kpi-good">+12.1%</span> vs mes anterior</div>
                </div>
                <div class="kpi-card">
                    <div class="kpi-label">Food Cost</div>
                    <div class="kpi-value kpi-warn">33.8%</div>
                    <div class="kpi-sub">COGS: 15.953,60 €</div>
                </div>
                <div class="kpi-card">
                    <div class="kpi-label">Inventario</div>
                    <div class="kpi-value">8400,00 €</div>
                    <div class="kpi-sub">4 Bajo mínimo · 1 Sin stock</div>
                </div>
            </div>
        </section>

        <section>
            <h2>📝 Resumen Ejecutivo</h2>
            <div class="resumen">Mes correcto.</div>
        </section>

        <section>
            <h2>💼 P&amp;L — Cuenta de Resultados</h2>
            
        <table class="pyg-table">
            <tr><td>Ingresos</td><td class="num">47.200,00 €</td></tr>
            <tr class="pyg-minus"><td>− COGS (coste materia prima)</td><td class="num">15.953,60 €</td></tr>
            <tr class="pyg-subtotal"><td>Margen bruto</td><td class="num">31.246,40 €</td></tr>
            <tr class="pyg-minus"><td>− Gastos fijos <span class="pyg-sub-info">(8)</span></td><td class="num">18.500,00 €</td></tr>
            <tr class="pyg-total"><td><strong>Beneficio neto</strong></td><td class="num"><strong class="kpi-good">12.746,40 €</strong></td></tr>
            <tr class="pyg-pct"><td>Margen neto</td><td class="num"><span class="kpi-good">27.0%</span></td></tr>
        </table>
    
        </section>

        
        <section>
            <h2>📉 Evolución diaria de ingresos</h2>
            <div class="sparkline-box">
    <svg viewBox="0 0 600 102" preserveAspectRatio="none" style="width:100%; height:110px;" role="img" aria-label="Evolución de ingresos">
        <defs>
            <linearGradient id="sl-area" x1="0" y1="0" x2="0" y2="1">
                <stop offset="0%"  stop-color="#1e3a8a" stop-opacity="0.35"/>
                <stop offset="100%" stop-color="#1e3a8a" stop-opacity="0"/>
            </linearGradient>
        </defs>
        <path d="M 8,72 L 8.0,27.8 L 154.0,16.5 L 300.0,20.5 L 446.0,8.0 L 592.0,12.6 L 592,72 Z" fill="url(#sl-area)" stroke="none"/>
        <polyline points="8.0,27.8 154.0,16.5 300.0,20.5 446.0,8.0 592.0,12.6" fill="none" stroke="#1e3a8a" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
        <circle cx="446.0" cy="8.0" r="3.5" fill="#f59e0b" stroke="#fff" stroke-width="1.5"/>
        <text x="8" y="96" font-size="11" fill="#64748b" font-family="-apple-system, sans-serif">01 abr</text>
        <text x="592" y="96" font-size="11" fill="#64748b" font-family="-apple-system, sans-serif" text-anchor="end">29 abr</text>
        <text x="446.0" y="14.0" font-size="11" fill="#f59e0b" font-weight="700" font-family="-apple-system, sans-serif" text-anchor="middle">2100,00 €</text>
    </svg></div>
        </section>
        

        

        

        

        
        <section>
            <h2>🚚 Top Proveedores</h2>
            <table>
                <thead>
                    <tr>
                        <th>Proveedor</th>
                        <th class="num">Este mes</th>
                        <th class="num">Mes anterior</th>
                        <th class="num">Variación</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Pescados Pepe</td>
            <td class="num">6200,00 €</td>
            <td class="num">5800,00 €</td>
            <td class="num"><span class="kpi-bad">+6.9%</span></td>
        </tr>
        <tr>
            <td>Frutas García</td>
            <td class="num">2100,00 €</td>
            <td class="num">2050,00 €</td>
            <td class="num"><span class="kpi-bad">+2.4%</span></td>
        </tr></tbody>
            </table>
        </section>
        

        <section>
            <h2>🗑️ Mermas (dinero perdido)</h2>
            
        <div class="mermas-kpi">
            <div class="mermas-kpi-label">Valor total perdido</div>
            <div class="mermas-kpi-value kpi-bad">145,00 €</div>
            <div class="mermas-kpi-sub">3 registros</div>
        </div>
        <table>
            <thead><tr>
                <th>Motivo</th>
                <th class="num">Nº</th>
                <th class="num">Valor</th>
            </tr></thead>
            <tbody>
        <tr>
            <td>caducado</td>
            <td class="num">2</td>
            <td class="num">95,00 €</td>
        </tr>
    
        <tr>
            <td>rotura</td>
            <td class="num">1</td>
            <td class="num">50,00 €</td>
        </tr>
    </tbody>
        </table>
    
        </section>

        
        <section>
            <h2>🏆 Platos Más Rentables</h2>
            <table>
                <thead>
                    <tr>
                        <th>Plato</th>
                        <th class="num">Vendidas</th>
                        <th class="num">Ingresos</th>
                        <th class="num">Margen</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Pulpo a la gallega</td>
            <td class="num">142</td>
            <td class="num">4118,00 €</td>
            <td class="num">71.0%</td>
        </tr>
    
        <tr>
            <td>Cocido madrileño</td>
            <td class="num">98</td>
            <td class="num">1862,00 €</td>
            <td class="num">65.0%</td>
        </tr>
    </tbody>
            </table>
        </section>
        

        
        <section>
            <h2>⚠️ Platos con Food Cost Alto</h2>
            <table>
                <thead>
                    <tr>
                        <th>Plato</th>
                        <th class="num">Vendidas</th>
                        <th class="num">Food Cost</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Solomillo Wellington</td>
            <td class="num">35</td>
            <td class="num"><span class="kpi-bad">48.0%</span></td>
        </tr>
    </tbody>
            </table>
        </section>
        

        
        <section>
            <h2>📈 Cambios de Precio Significativos</h2>
            <table>
                <thead>
                    <tr>
                        <th>Ingrediente</th>
                        <th class="num">Anterior</th>
                        <th class="num">Actual</th>
                        <th class="num">Variación</th>
                    </tr>
                </thead>
                <tbody>
        <tr>
            <td>Pulpo</td>
            <td class="num">18,50 €</td>
            <td class="num">21,00 €</td>
            <td class="num"><span class="kpi-bad">+13.5%</span></td>
        </tr></tbody>
            </table>
        </section>
        

        <div class="footer">
            Generado el 30 de abril de 2026 a las 14:00 · MindLoop CostOS
        </div>
    </div>
</div>
</body>
</html>"
`;
